// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Static AudioPlayer renders player with slider and all the controls 1`] = `
<DocumentFragment>
  .emotion-54 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-53 {
  box-sizing: border-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
}

@media screen {
  .emotion-53 {
    margin: -0px 0px 0 0px;
  }
}

@media screen and (min-width:480px) {
  .emotion-53 {
    margin: -0px 0px 0 0px;
  }
}

@media screen and (min-width:960px) {
  .emotion-53 {
    margin: -0px 0px 0 0px;
  }
}

@media screen and (min-width:1440px) {
  .emotion-53 {
    margin: -0px 0px 0 0px;
  }
}

.emotion-0 {
  box-sizing: border-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-0 {
    padding: 0 0px;
    margin-top: 0px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
    display: block;
  }
}

@media screen and (min-width:480px) {
  .emotion-0 {
    padding: 0 0px;
    margin-top: 0px;
    display: block;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    padding: 0 0px;
    margin-top: 0px;
    display: block;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    padding: 0 0px;
    margin-top: 0px;
    display: block;
  }
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  position: relative;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  box-sizing: border-box;
  background-color: #f0f0f0;
  border-radius: 20rem;
  margin: calc(16px/2 - 8px/2) calc(16px/2);
  height: 8px;
  width: 100%;
}

.emotion-1 {
  background-color: #0A68C1;
  border-color: #0A68C1;
  border-width: 1px;
  border-radius: 50%;
  outline: none;
  height: 16px;
  width: 16px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: pointer;
}

.emotion-1 svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-1:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-1:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-1:active:not(:disabled) svg {
  fill: #535353;
  color: #535353;
}

.emotion-1:disabled {
  border-style: none;
}

.emotion-1:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-6 {
  width: 100%;
  margin-top: 12px;
  padding: 0 calc(16px / 2);
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-3 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #535353;
}

.emotion-51 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-22 {
  width: 100%;
  max-width: 184px;
  padding: 0 calc(24px / 2);
}

@media screen {
  .emotion-22 {
    display: none;
  }
}

@media screen and (min-width:480px) {
  .emotion-22 {
    display: none;
  }
}

@media screen and (min-width:960px) {
  .emotion-22 {
    display: block;
  }
}

@media screen and (min-width:1440px) {
  .emotion-22 {
    display: block;
  }
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  position: relative;
}

.emotion-13 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-right: 8px;
}

.emotion-12 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: transparent;
  color: #0A68C1;
  border-radius: 50%;
  min-height: 8px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  padding: 8px;
  width: 32px;
  height: 32px;
  margin: 8px 0;
}

.emotion-12:disabled {
  cursor: not-allowed;
}

.emotion-12 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-12:hover:not(:disabled) {
  background-color: #e6f4ff;
}

.emotion-12:active:not(:disabled) {
  background-color: #d5ebff;
}

.emotion-12:disabled {
  color: #9c9c9c;
  background-color: transparent;
}

.emotion-12:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-12 svg {
  width: 16px;
  height: 16px;
}

.emotion-12::before {
  content: '';
  position: absolute;
  left: 0;
  top: -8px;
  width: 100%;
  height: 48px;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-9 {
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 24px;
  height: 24px;
  display: inline-block;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  box-sizing: border-box;
  background-color: #f0f0f0;
  border-radius: 20rem;
  margin: calc(16px/2 - 4px/2) calc(16px/2);
  height: 4px;
  width: 100%;
}

.emotion-20 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-left: 8px;
}

.emotion-48 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-12px/2);
  margin-right: calc(-12px/2);
}

.emotion-27 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(12px/2);
  margin-right: calc(12px/2);
}

.emotion-26 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: transparent;
  color: #0A68C1;
  border-radius: 50%;
  min-height: 12px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.7142857142857142;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 12px;
  width: 48px;
  height: 48px;
}

.emotion-26:disabled {
  cursor: not-allowed;
}

.emotion-26 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-26:hover:not(:disabled) {
  background-color: #e6f4ff;
}

.emotion-26:active:not(:disabled) {
  background-color: #d5ebff;
}

.emotion-26:disabled {
  color: #9c9c9c;
  background-color: transparent;
}

.emotion-26:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-26 svg {
  width: 24px;
  height: 24px;
}

.emotion-23 {
  fill: #2e2e2e;
  color: #2e2e2e;
  display: inline-block;
}

.emotion-36 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: #0A68C1;
  border-radius: 50%;
  color: #FFFFFF;
  min-height: 16px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 1.75;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 16px;
  width: 64px;
  height: 64px;
}

.emotion-36:disabled {
  cursor: not-allowed;
}

.emotion-36 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-36:hover:not(:disabled) {
  background-color: #02509B;
  box-shadow: 0 0 1px 0 rgba(40,41,61,0.04),0 2px 4px 0 rgba(96,97,112,0.16);
}

.emotion-36:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-36:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-36:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-36 svg {
  width: 32px;
  height: 32px;
}

.emotion-49 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

<div
    class="emotion-54"
  >
    <div
      class="emotion-53"
    >
      <audio
        data-testid="audio-player"
        src="https://extras.thetimes.co.uk/web/public/2018/world-cup-alexa-breifing/assets/latest-briefing.mp3"
      />
      <div
        class="emotion-0"
      >
        <div>
          Well hello there children!!!
        </div>
      </div>
      <div
        class="emotion-0"
      >
        <div
          class="emotion-7"
          data-testid="audio-slider"
        >
          <div
            class="emotion-2"
            data-testid="audio-slider-track"
            values="0"
          >
            <div
              aria-label="slider"
              aria-valuemax="20"
              aria-valuemin="0"
              aria-valuenow="0"
              class="emotion-1"
              draggable="false"
              role="slider"
              style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(NaNpx, NaNpx);"
              tabindex="0"
              values="0"
            />
          </div>
          <div
            class="emotion-6"
          >
            <div
              class="emotion-5"
            >
              <div
                class="emotion-3"
                data-testid="min-label"
              >
                00:00
              </div>
              <div
                class="emotion-3"
                data-testid="max-label"
              >
                00:20
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-0"
      >
        <div
          class="emotion-51"
        >
          <div
            class="emotion-22"
          >
            <div
              class="emotion-21"
              data-testid="volume-control"
            >
              <div
                class="emotion-13"
                data-testid="min-label"
              >
                <button
                  class="emotion-12"
                  data-testid="mute-button"
                  type="button"
                >
                  <div
                    class="emotion-11"
                  >
                    <div
                      class="emotion-10"
                    >
                      <svg
                        class="emotion-9"
                        viewBox="0 0 24 24"
                      >
                        <title>
                          Volume down
                        </title>
                        <path
                          d="M18.5 12c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM5 9v6h4l5 5V4L9 9H5z"
                        />
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
              <div
                class="emotion-15"
                data-testid="volume-control-track"
                values="1"
              >
                <div
                  aria-label="Volume Control"
                  aria-valuemax="1"
                  aria-valuemin="0"
                  aria-valuenow="1"
                  class="emotion-1"
                  draggable="false"
                  role="slider"
                  style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(NaNpx, NaNpx);"
                  tabindex="0"
                  values="1"
                />
              </div>
              <div
                class="emotion-20"
                data-testid="max-label"
              >
                <button
                  class="emotion-12"
                  data-testid="volumeup-button"
                  type="button"
                >
                  <div
                    class="emotion-11"
                  >
                    <div
                      class="emotion-10"
                    >
                      <svg
                        class="emotion-9"
                        viewBox="0 0 24 24"
                      >
                        <title>
                          Volume up
                        </title>
                        <path
                          d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"
                        />
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            class="emotion-48"
          >
            <div
              class="emotion-27"
            >
              <button
                class="emotion-26"
                data-testid="audio-player-skip-previous"
                type="button"
              >
                <div
                  class="emotion-11"
                >
                  <div
                    class="emotion-10"
                  >
                    <svg
                      class="emotion-23"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        SkipPrevious icon
                      </title>
                      <path
                        d="M6 6h2v12H6zm3.5 6l8.5 6V6z"
                      />
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
            <div
              class="emotion-27"
            >
              <button
                class="emotion-26"
                data-testid="audio-player-replay"
                type="button"
              >
                <div
                  class="emotion-11"
                >
                  <div
                    class="emotion-10"
                  >
                    <svg
                      class="emotion-23"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        Replay10 icon
                      </title>
                      <path
                        d="M12 5V1L7 6l5 5V7c3.3 0 6 2.7 6 6s-2.7 6-6 6-6-2.7-6-6H4c0 4.4 3.6 8 8 8s8-3.6 8-8-3.6-8-8-8zm-1.1 11H10v-3.3L9 13v-.7l1.8-.6h.1V16zm4.3-1.8c0 .3 0 .6-.1.8l-.3.6s-.3.3-.5.3-.4.1-.6.1-.4 0-.6-.1-.3-.2-.5-.3-.2-.3-.3-.6-.1-.5-.1-.8v-.7c0-.3 0-.6.1-.8l.3-.6s.3-.3.5-.3.4-.1.6-.1.4 0 .6.1c.2.1.3.2.5.3s.2.3.3.6.1.5.1.8v.7zm-.9-.8v-.5s-.1-.2-.1-.3-.1-.1-.2-.2-.2-.1-.3-.1-.2 0-.3.1l-.2.2s-.1.2-.1.3v2s.1.2.1.3.1.1.2.2.2.1.3.1.2 0 .3-.1l.2-.2s.1-.2.1-.3v-1.5z"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
            <div
              class="emotion-27"
            >
              <button
                aria-pressed="false"
                class="emotion-36"
                data-testid="audio-player-play-button"
                type="button"
              >
                <div
                  class="emotion-11"
                >
                  <div
                    class="emotion-10"
                  >
                    <svg
                      class="emotion-23"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        Play
                      </title>
                      <polygon
                        points="8 5 8 19 19 12"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
            <div
              class="emotion-27"
            >
              <button
                class="emotion-26"
                data-testid="audio-player-forward"
                type="button"
              >
                <div
                  class="emotion-11"
                >
                  <div
                    class="emotion-10"
                  >
                    <svg
                      class="emotion-23"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        Forward10 icon
                      </title>
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M18 13c0 3.31-2.69 6-6 6s-6-2.69-6-6 2.69-6 6-6v4l5-5-5-5v4c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8h-2z"
                      />
                      <path
                        d="M10.86 15.94v-4.27h-.09L9 12.3v.69l1.01-.31v3.26zM12.25 13.44v.74c0 1.9 1.31 1.82 1.44 1.82.14 0 1.44.09 1.44-1.82v-.74c0-1.9-1.31-1.82-1.44-1.82-.14 0-1.44-.09-1.44 1.82zm2.04-.12v.97c0 .77-.21 1.03-.59 1.03s-.6-.26-.6-1.03v-.97c0-.75.22-1.01.59-1.01.38-.01.6.26.6 1.01z"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
            <div
              class="emotion-27"
            >
              <button
                class="emotion-26"
                data-testid="audio-player-skip-next"
                type="button"
              >
                <div
                  class="emotion-11"
                >
                  <div
                    class="emotion-10"
                  >
                    <svg
                      class="emotion-23"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        SkipNext icon
                      </title>
                      <path
                        d="M6 18l8.5-6L6 6v12zM16 6v12h2V6h-2z"
                      />
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="emotion-22"
          >
            <div
              class="emotion-49"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Static AudioPlayer renders player with slider and all the controls, but skips are disabled 1`] = `
<DocumentFragment>
  .emotion-54 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-53 {
  box-sizing: border-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
}

@media screen {
  .emotion-53 {
    margin: -0px 0px 0 0px;
  }
}

@media screen and (min-width:480px) {
  .emotion-53 {
    margin: -0px 0px 0 0px;
  }
}

@media screen and (min-width:960px) {
  .emotion-53 {
    margin: -0px 0px 0 0px;
  }
}

@media screen and (min-width:1440px) {
  .emotion-53 {
    margin: -0px 0px 0 0px;
  }
}

.emotion-0 {
  box-sizing: border-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-0 {
    padding: 0 0px;
    margin-top: 0px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
    display: block;
  }
}

@media screen and (min-width:480px) {
  .emotion-0 {
    padding: 0 0px;
    margin-top: 0px;
    display: block;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    padding: 0 0px;
    margin-top: 0px;
    display: block;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    padding: 0 0px;
    margin-top: 0px;
    display: block;
  }
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  position: relative;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  box-sizing: border-box;
  background-color: #f0f0f0;
  border-radius: 20rem;
  margin: calc(16px/2 - 8px/2) calc(16px/2);
  height: 8px;
  width: 100%;
}

.emotion-1 {
  background-color: #0A68C1;
  border-color: #0A68C1;
  border-width: 1px;
  border-radius: 50%;
  outline: none;
  height: 16px;
  width: 16px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: pointer;
}

.emotion-1 svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-1:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-1:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-1:active:not(:disabled) svg {
  fill: #535353;
  color: #535353;
}

.emotion-1:disabled {
  border-style: none;
}

.emotion-1:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-6 {
  width: 100%;
  margin-top: 12px;
  padding: 0 calc(16px / 2);
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-3 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #535353;
}

.emotion-51 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-22 {
  width: 100%;
  max-width: 184px;
  padding: 0 calc(24px / 2);
}

@media screen {
  .emotion-22 {
    display: none;
  }
}

@media screen and (min-width:480px) {
  .emotion-22 {
    display: none;
  }
}

@media screen and (min-width:960px) {
  .emotion-22 {
    display: block;
  }
}

@media screen and (min-width:1440px) {
  .emotion-22 {
    display: block;
  }
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  position: relative;
}

.emotion-13 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-right: 8px;
}

.emotion-12 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: transparent;
  color: #0A68C1;
  border-radius: 50%;
  min-height: 8px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  padding: 8px;
  width: 32px;
  height: 32px;
  margin: 8px 0;
}

.emotion-12:disabled {
  cursor: not-allowed;
}

.emotion-12 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-12:hover:not(:disabled) {
  background-color: #e6f4ff;
}

.emotion-12:active:not(:disabled) {
  background-color: #d5ebff;
}

.emotion-12:disabled {
  color: #9c9c9c;
  background-color: transparent;
}

.emotion-12:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-12 svg {
  width: 16px;
  height: 16px;
}

.emotion-12::before {
  content: '';
  position: absolute;
  left: 0;
  top: -8px;
  width: 100%;
  height: 48px;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-9 {
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 24px;
  height: 24px;
  display: inline-block;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  box-sizing: border-box;
  background-color: #f0f0f0;
  border-radius: 20rem;
  margin: calc(16px/2 - 4px/2) calc(16px/2);
  height: 4px;
  width: 100%;
}

.emotion-20 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-left: 8px;
}

.emotion-48 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-12px/2);
  margin-right: calc(-12px/2);
}

.emotion-27 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(12px/2);
  margin-right: calc(12px/2);
}

.emotion-26 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: transparent;
  color: #0A68C1;
  border-radius: 50%;
  min-height: 12px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.7142857142857142;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 12px;
  width: 48px;
  height: 48px;
}

.emotion-26:disabled {
  cursor: not-allowed;
}

.emotion-26 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-26:hover:not(:disabled) {
  background-color: #e6f4ff;
}

.emotion-26:active:not(:disabled) {
  background-color: #d5ebff;
}

.emotion-26:disabled {
  color: #9c9c9c;
  background-color: transparent;
}

.emotion-26:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-26 svg {
  width: 24px;
  height: 24px;
}

.emotion-23 {
  fill: #2e2e2e;
  color: #2e2e2e;
  display: inline-block;
}

.emotion-36 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: #0A68C1;
  border-radius: 50%;
  color: #FFFFFF;
  min-height: 16px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 1.75;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 16px;
  width: 64px;
  height: 64px;
}

.emotion-36:disabled {
  cursor: not-allowed;
}

.emotion-36 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-36:hover:not(:disabled) {
  background-color: #02509B;
  box-shadow: 0 0 1px 0 rgba(40,41,61,0.04),0 2px 4px 0 rgba(96,97,112,0.16);
}

.emotion-36:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-36:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-36:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-36 svg {
  width: 32px;
  height: 32px;
}

.emotion-49 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

<div
    class="emotion-54"
  >
    <div
      class="emotion-53"
    >
      <audio
        data-testid="audio-player"
        src="https://extras.thetimes.co.uk/web/public/2018/world-cup-alexa-breifing/assets/latest-briefing.mp3"
      />
      <div
        class="emotion-0"
      >
        <div>
          Well hello there children!!!
        </div>
      </div>
      <div
        class="emotion-0"
      >
        <div
          class="emotion-7"
          data-testid="audio-slider"
        >
          <div
            class="emotion-2"
            data-testid="audio-slider-track"
            values="0"
          >
            <div
              aria-label="slider"
              aria-valuemax="20"
              aria-valuemin="0"
              aria-valuenow="0"
              class="emotion-1"
              draggable="false"
              role="slider"
              style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(NaNpx, NaNpx);"
              tabindex="0"
              values="0"
            />
          </div>
          <div
            class="emotion-6"
          >
            <div
              class="emotion-5"
            >
              <div
                class="emotion-3"
                data-testid="min-label"
              >
                00:00
              </div>
              <div
                class="emotion-3"
                data-testid="max-label"
              >
                00:20
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-0"
      >
        <div
          class="emotion-51"
        >
          <div
            class="emotion-22"
          >
            <div
              class="emotion-21"
              data-testid="volume-control"
            >
              <div
                class="emotion-13"
                data-testid="min-label"
              >
                <button
                  class="emotion-12"
                  data-testid="mute-button"
                  type="button"
                >
                  <div
                    class="emotion-11"
                  >
                    <div
                      class="emotion-10"
                    >
                      <svg
                        class="emotion-9"
                        viewBox="0 0 24 24"
                      >
                        <title>
                          Volume down
                        </title>
                        <path
                          d="M18.5 12c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM5 9v6h4l5 5V4L9 9H5z"
                        />
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
              <div
                class="emotion-15"
                data-testid="volume-control-track"
                values="1"
              >
                <div
                  aria-label="Volume Control"
                  aria-valuemax="1"
                  aria-valuemin="0"
                  aria-valuenow="1"
                  class="emotion-1"
                  draggable="false"
                  role="slider"
                  style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(NaNpx, NaNpx);"
                  tabindex="0"
                  values="1"
                />
              </div>
              <div
                class="emotion-20"
                data-testid="max-label"
              >
                <button
                  class="emotion-12"
                  data-testid="volumeup-button"
                  type="button"
                >
                  <div
                    class="emotion-11"
                  >
                    <div
                      class="emotion-10"
                    >
                      <svg
                        class="emotion-9"
                        viewBox="0 0 24 24"
                      >
                        <title>
                          Volume up
                        </title>
                        <path
                          d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"
                        />
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            class="emotion-48"
          >
            <div
              class="emotion-27"
            >
              <button
                class="emotion-26"
                data-testid="audio-player-skip-previous"
                disabled=""
                type="button"
              >
                <div
                  class="emotion-11"
                >
                  <div
                    class="emotion-10"
                  >
                    <svg
                      class="emotion-23"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        SkipPrevious icon
                      </title>
                      <path
                        d="M6 6h2v12H6zm3.5 6l8.5 6V6z"
                      />
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
            <div
              class="emotion-27"
            >
              <button
                class="emotion-26"
                data-testid="audio-player-replay"
                type="button"
              >
                <div
                  class="emotion-11"
                >
                  <div
                    class="emotion-10"
                  >
                    <svg
                      class="emotion-23"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        Replay10 icon
                      </title>
                      <path
                        d="M12 5V1L7 6l5 5V7c3.3 0 6 2.7 6 6s-2.7 6-6 6-6-2.7-6-6H4c0 4.4 3.6 8 8 8s8-3.6 8-8-3.6-8-8-8zm-1.1 11H10v-3.3L9 13v-.7l1.8-.6h.1V16zm4.3-1.8c0 .3 0 .6-.1.8l-.3.6s-.3.3-.5.3-.4.1-.6.1-.4 0-.6-.1-.3-.2-.5-.3-.2-.3-.3-.6-.1-.5-.1-.8v-.7c0-.3 0-.6.1-.8l.3-.6s.3-.3.5-.3.4-.1.6-.1.4 0 .6.1c.2.1.3.2.5.3s.2.3.3.6.1.5.1.8v.7zm-.9-.8v-.5s-.1-.2-.1-.3-.1-.1-.2-.2-.2-.1-.3-.1-.2 0-.3.1l-.2.2s-.1.2-.1.3v2s.1.2.1.3.1.1.2.2.2.1.3.1.2 0 .3-.1l.2-.2s.1-.2.1-.3v-1.5z"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
            <div
              class="emotion-27"
            >
              <button
                aria-pressed="false"
                class="emotion-36"
                data-testid="audio-player-play-button"
                type="button"
              >
                <div
                  class="emotion-11"
                >
                  <div
                    class="emotion-10"
                  >
                    <svg
                      class="emotion-23"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        Play
                      </title>
                      <polygon
                        points="8 5 8 19 19 12"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
            <div
              class="emotion-27"
            >
              <button
                class="emotion-26"
                data-testid="audio-player-forward"
                type="button"
              >
                <div
                  class="emotion-11"
                >
                  <div
                    class="emotion-10"
                  >
                    <svg
                      class="emotion-23"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        Forward10 icon
                      </title>
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M18 13c0 3.31-2.69 6-6 6s-6-2.69-6-6 2.69-6 6-6v4l5-5-5-5v4c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8h-2z"
                      />
                      <path
                        d="M10.86 15.94v-4.27h-.09L9 12.3v.69l1.01-.31v3.26zM12.25 13.44v.74c0 1.9 1.31 1.82 1.44 1.82.14 0 1.44.09 1.44-1.82v-.74c0-1.9-1.31-1.82-1.44-1.82-.14 0-1.44-.09-1.44 1.82zm2.04-.12v.97c0 .77-.21 1.03-.59 1.03s-.6-.26-.6-1.03v-.97c0-.75.22-1.01.59-1.01.38-.01.6.26.6 1.01z"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
            <div
              class="emotion-27"
            >
              <button
                class="emotion-26"
                data-testid="audio-player-skip-next"
                disabled=""
                type="button"
              >
                <div
                  class="emotion-11"
                >
                  <div
                    class="emotion-10"
                  >
                    <svg
                      class="emotion-23"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        SkipNext icon
                      </title>
                      <path
                        d="M6 18l8.5-6L6 6v12zM16 6v12h2V6h-2z"
                      />
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="emotion-22"
          >
            <div
              class="emotion-49"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Static AudioPlayer renders player with slider set to the updated current time 1`] = `
<DocumentFragment>
  .emotion-44 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-43 {
  box-sizing: border-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
}

@media screen {
  .emotion-43 {
    margin: -0px 0px 0 0px;
  }
}

@media screen and (min-width:480px) {
  .emotion-43 {
    margin: -0px 0px 0 0px;
  }
}

@media screen and (min-width:960px) {
  .emotion-43 {
    margin: -0px 0px 0 0px;
  }
}

@media screen and (min-width:1440px) {
  .emotion-43 {
    margin: -0px 0px 0 0px;
  }
}

.emotion-0 {
  box-sizing: border-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-0 {
    padding: 0 0px;
    margin-top: 0px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
    display: block;
  }
}

@media screen and (min-width:480px) {
  .emotion-0 {
    padding: 0 0px;
    margin-top: 0px;
    display: block;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    padding: 0 0px;
    margin-top: 0px;
    display: block;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    padding: 0 0px;
    margin-top: 0px;
    display: block;
  }
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  position: relative;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  box-sizing: border-box;
  background-color: #f0f0f0;
  border-radius: 20rem;
  margin: calc(16px/2 - 8px/2) calc(16px/2);
  height: 8px;
  width: 100%;
}

.emotion-1 {
  background-color: #0A68C1;
  border-color: #0A68C1;
  border-width: 1px;
  border-radius: 50%;
  outline: none;
  height: 16px;
  width: 16px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: pointer;
}

.emotion-1 svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-1:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-1:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-1:active:not(:disabled) svg {
  fill: #535353;
  color: #535353;
}

.emotion-1:disabled {
  border-style: none;
}

.emotion-1:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-6 {
  width: 100%;
  margin-top: 12px;
  padding: 0 calc(16px / 2);
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-3 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #535353;
}

.emotion-41 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-22 {
  width: 100%;
  max-width: 184px;
  padding: 0 calc(24px / 2);
}

@media screen {
  .emotion-22 {
    display: none;
  }
}

@media screen and (min-width:480px) {
  .emotion-22 {
    display: none;
  }
}

@media screen and (min-width:960px) {
  .emotion-22 {
    display: block;
  }
}

@media screen and (min-width:1440px) {
  .emotion-22 {
    display: block;
  }
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  position: relative;
}

.emotion-13 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-right: 8px;
}

.emotion-12 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: transparent;
  color: #0A68C1;
  border-radius: 50%;
  min-height: 8px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  padding: 8px;
  width: 32px;
  height: 32px;
  margin: 8px 0;
}

.emotion-12:disabled {
  cursor: not-allowed;
}

.emotion-12 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-12:hover:not(:disabled) {
  background-color: #e6f4ff;
}

.emotion-12:active:not(:disabled) {
  background-color: #d5ebff;
}

.emotion-12:disabled {
  color: #9c9c9c;
  background-color: transparent;
}

.emotion-12:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-12 svg {
  width: 16px;
  height: 16px;
}

.emotion-12::before {
  content: '';
  position: absolute;
  left: 0;
  top: -8px;
  width: 100%;
  height: 48px;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-9 {
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 24px;
  height: 24px;
  display: inline-block;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  box-sizing: border-box;
  background-color: #f0f0f0;
  border-radius: 20rem;
  margin: calc(16px/2 - 4px/2) calc(16px/2);
  height: 4px;
  width: 100%;
}

.emotion-20 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-left: 8px;
}

.emotion-38 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-12px/2);
  margin-right: calc(-12px/2);
}

.emotion-27 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(12px/2);
  margin-right: calc(12px/2);
}

.emotion-26 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: transparent;
  color: #0A68C1;
  border-radius: 50%;
  min-height: 12px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.7142857142857142;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 12px;
  width: 48px;
  height: 48px;
}

.emotion-26:disabled {
  cursor: not-allowed;
}

.emotion-26 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-26:hover:not(:disabled) {
  background-color: #e6f4ff;
}

.emotion-26:active:not(:disabled) {
  background-color: #d5ebff;
}

.emotion-26:disabled {
  color: #9c9c9c;
  background-color: transparent;
}

.emotion-26:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-26 svg {
  width: 24px;
  height: 24px;
}

.emotion-23 {
  fill: #2e2e2e;
  color: #2e2e2e;
  display: inline-block;
}

.emotion-31 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: #0A68C1;
  border-radius: 50%;
  color: #FFFFFF;
  min-height: 16px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 1.75;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 16px;
  width: 64px;
  height: 64px;
}

.emotion-31:disabled {
  cursor: not-allowed;
}

.emotion-31 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-31:hover:not(:disabled) {
  background-color: #02509B;
  box-shadow: 0 0 1px 0 rgba(40,41,61,0.04),0 2px 4px 0 rgba(96,97,112,0.16);
}

.emotion-31:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-31:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-31:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-31 svg {
  width: 32px;
  height: 32px;
}

.emotion-39 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

<div
    class="emotion-44"
  >
    <div
      class="emotion-43"
    >
      <audio
        data-testid="audio-player"
        src="https://extras.thetimes.co.uk/web/public/2018/world-cup-alexa-breifing/assets/latest-briefing.mp3"
      />
      <div
        class="emotion-0"
      >
        <div>
          Well hello there children!!!
        </div>
      </div>
      <div
        class="emotion-0"
      >
        <div
          class="emotion-7"
          data-testid="audio-slider"
        >
          <div
            class="emotion-2"
            data-testid="audio-slider-track"
            values="10"
          >
            <div
              aria-label="slider"
              aria-valuemax="20"
              aria-valuemin="0"
              aria-valuenow="10"
              class="emotion-1"
              draggable="false"
              role="slider"
              style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(NaNpx, NaNpx);"
              tabindex="0"
              values="10"
            />
          </div>
          <div
            class="emotion-6"
          >
            <div
              class="emotion-5"
            >
              <div
                class="emotion-3"
                data-testid="min-label"
              >
                00:10
              </div>
              <div
                class="emotion-3"
                data-testid="max-label"
              >
                00:20
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-0"
      >
        <div
          class="emotion-41"
        >
          <div
            class="emotion-22"
          >
            <div
              class="emotion-21"
              data-testid="volume-control"
            >
              <div
                class="emotion-13"
                data-testid="min-label"
              >
                <button
                  class="emotion-12"
                  data-testid="mute-button"
                  type="button"
                >
                  <div
                    class="emotion-11"
                  >
                    <div
                      class="emotion-10"
                    >
                      <svg
                        class="emotion-9"
                        viewBox="0 0 24 24"
                      >
                        <title>
                          Volume down
                        </title>
                        <path
                          d="M18.5 12c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM5 9v6h4l5 5V4L9 9H5z"
                        />
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
              <div
                class="emotion-15"
                data-testid="volume-control-track"
                values="1"
              >
                <div
                  aria-label="Volume Control"
                  aria-valuemax="1"
                  aria-valuemin="0"
                  aria-valuenow="1"
                  class="emotion-1"
                  draggable="false"
                  role="slider"
                  style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(NaNpx, NaNpx);"
                  tabindex="0"
                  values="1"
                />
              </div>
              <div
                class="emotion-20"
                data-testid="max-label"
              >
                <button
                  class="emotion-12"
                  data-testid="volumeup-button"
                  type="button"
                >
                  <div
                    class="emotion-11"
                  >
                    <div
                      class="emotion-10"
                    >
                      <svg
                        class="emotion-9"
                        viewBox="0 0 24 24"
                      >
                        <title>
                          Volume up
                        </title>
                        <path
                          d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"
                        />
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            class="emotion-38"
          >
            <div
              class="emotion-27"
            >
              <button
                class="emotion-26"
                data-testid="audio-player-replay"
                type="button"
              >
                <div
                  class="emotion-11"
                >
                  <div
                    class="emotion-10"
                  >
                    <svg
                      class="emotion-23"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        Replay10 icon
                      </title>
                      <path
                        d="M12 5V1L7 6l5 5V7c3.3 0 6 2.7 6 6s-2.7 6-6 6-6-2.7-6-6H4c0 4.4 3.6 8 8 8s8-3.6 8-8-3.6-8-8-8zm-1.1 11H10v-3.3L9 13v-.7l1.8-.6h.1V16zm4.3-1.8c0 .3 0 .6-.1.8l-.3.6s-.3.3-.5.3-.4.1-.6.1-.4 0-.6-.1-.3-.2-.5-.3-.2-.3-.3-.6-.1-.5-.1-.8v-.7c0-.3 0-.6.1-.8l.3-.6s.3-.3.5-.3.4-.1.6-.1.4 0 .6.1c.2.1.3.2.5.3s.2.3.3.6.1.5.1.8v.7zm-.9-.8v-.5s-.1-.2-.1-.3-.1-.1-.2-.2-.2-.1-.3-.1-.2 0-.3.1l-.2.2s-.1.2-.1.3v2s.1.2.1.3.1.1.2.2.2.1.3.1.2 0 .3-.1l.2-.2s.1-.2.1-.3v-1.5z"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
            <div
              class="emotion-27"
            >
              <button
                aria-pressed="false"
                class="emotion-31"
                data-testid="audio-player-play-button"
                type="button"
              >
                <div
                  class="emotion-11"
                >
                  <div
                    class="emotion-10"
                  >
                    <svg
                      class="emotion-23"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        Play
                      </title>
                      <polygon
                        points="8 5 8 19 19 12"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
            <div
              class="emotion-27"
            >
              <button
                class="emotion-26"
                data-testid="audio-player-forward"
                type="button"
              >
                <div
                  class="emotion-11"
                >
                  <div
                    class="emotion-10"
                  >
                    <svg
                      class="emotion-23"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        Forward10 icon
                      </title>
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M18 13c0 3.31-2.69 6-6 6s-6-2.69-6-6 2.69-6 6-6v4l5-5-5-5v4c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8h-2z"
                      />
                      <path
                        d="M10.86 15.94v-4.27h-.09L9 12.3v.69l1.01-.31v3.26zM12.25 13.44v.74c0 1.9 1.31 1.82 1.44 1.82.14 0 1.44.09 1.44-1.82v-.74c0-1.9-1.31-1.82-1.44-1.82-.14 0-1.44-.09-1.44 1.82zm2.04-.12v.97c0 .77-.21 1.03-.59 1.03s-.6-.26-.6-1.03v-.97c0-.75.22-1.01.59-1.01.38-.01.6.26.6 1.01z"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="emotion-22"
          >
            <div
              class="emotion-39"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Static AudioPlayer renders player with slider when metadata duration of static audio is loaded 1`] = `
<DocumentFragment>
  .emotion-44 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-43 {
  box-sizing: border-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
}

@media screen {
  .emotion-43 {
    margin: -0px 0px 0 0px;
  }
}

@media screen and (min-width:480px) {
  .emotion-43 {
    margin: -0px 0px 0 0px;
  }
}

@media screen and (min-width:960px) {
  .emotion-43 {
    margin: -0px 0px 0 0px;
  }
}

@media screen and (min-width:1440px) {
  .emotion-43 {
    margin: -0px 0px 0 0px;
  }
}

.emotion-0 {
  box-sizing: border-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-0 {
    padding: 0 0px;
    margin-top: 0px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
    display: block;
  }
}

@media screen and (min-width:480px) {
  .emotion-0 {
    padding: 0 0px;
    margin-top: 0px;
    display: block;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    padding: 0 0px;
    margin-top: 0px;
    display: block;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    padding: 0 0px;
    margin-top: 0px;
    display: block;
  }
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  position: relative;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  box-sizing: border-box;
  background-color: #f0f0f0;
  border-radius: 20rem;
  margin: calc(16px/2 - 8px/2) calc(16px/2);
  height: 8px;
  width: 100%;
}

.emotion-1 {
  background-color: #0A68C1;
  border-color: #0A68C1;
  border-width: 1px;
  border-radius: 50%;
  outline: none;
  height: 16px;
  width: 16px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: pointer;
}

.emotion-1 svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-1:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-1:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-1:active:not(:disabled) svg {
  fill: #535353;
  color: #535353;
}

.emotion-1:disabled {
  border-style: none;
}

.emotion-1:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-6 {
  width: 100%;
  margin-top: 12px;
  padding: 0 calc(16px / 2);
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-3 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #535353;
}

.emotion-41 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-22 {
  width: 100%;
  max-width: 184px;
  padding: 0 calc(24px / 2);
}

@media screen {
  .emotion-22 {
    display: none;
  }
}

@media screen and (min-width:480px) {
  .emotion-22 {
    display: none;
  }
}

@media screen and (min-width:960px) {
  .emotion-22 {
    display: block;
  }
}

@media screen and (min-width:1440px) {
  .emotion-22 {
    display: block;
  }
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  position: relative;
}

.emotion-13 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-right: 8px;
}

.emotion-12 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: transparent;
  color: #0A68C1;
  border-radius: 50%;
  min-height: 8px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  padding: 8px;
  width: 32px;
  height: 32px;
  margin: 8px 0;
}

.emotion-12:disabled {
  cursor: not-allowed;
}

.emotion-12 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-12:hover:not(:disabled) {
  background-color: #e6f4ff;
}

.emotion-12:active:not(:disabled) {
  background-color: #d5ebff;
}

.emotion-12:disabled {
  color: #9c9c9c;
  background-color: transparent;
}

.emotion-12:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-12 svg {
  width: 16px;
  height: 16px;
}

.emotion-12::before {
  content: '';
  position: absolute;
  left: 0;
  top: -8px;
  width: 100%;
  height: 48px;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-9 {
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 24px;
  height: 24px;
  display: inline-block;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  box-sizing: border-box;
  background-color: #f0f0f0;
  border-radius: 20rem;
  margin: calc(16px/2 - 4px/2) calc(16px/2);
  height: 4px;
  width: 100%;
}

.emotion-20 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-left: 8px;
}

.emotion-38 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-12px/2);
  margin-right: calc(-12px/2);
}

.emotion-27 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(12px/2);
  margin-right: calc(12px/2);
}

.emotion-26 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: transparent;
  color: #0A68C1;
  border-radius: 50%;
  min-height: 12px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.7142857142857142;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 12px;
  width: 48px;
  height: 48px;
}

.emotion-26:disabled {
  cursor: not-allowed;
}

.emotion-26 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-26:hover:not(:disabled) {
  background-color: #e6f4ff;
}

.emotion-26:active:not(:disabled) {
  background-color: #d5ebff;
}

.emotion-26:disabled {
  color: #9c9c9c;
  background-color: transparent;
}

.emotion-26:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-26 svg {
  width: 24px;
  height: 24px;
}

.emotion-23 {
  fill: #2e2e2e;
  color: #2e2e2e;
  display: inline-block;
}

.emotion-31 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: #0A68C1;
  border-radius: 50%;
  color: #FFFFFF;
  min-height: 16px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 1.75;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 16px;
  width: 64px;
  height: 64px;
}

.emotion-31:disabled {
  cursor: not-allowed;
}

.emotion-31 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-31:hover:not(:disabled) {
  background-color: #02509B;
  box-shadow: 0 0 1px 0 rgba(40,41,61,0.04),0 2px 4px 0 rgba(96,97,112,0.16);
}

.emotion-31:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-31:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-31:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-31 svg {
  width: 32px;
  height: 32px;
}

.emotion-39 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

<div
    class="emotion-44"
  >
    <div
      class="emotion-43"
    >
      <audio
        data-testid="audio-player"
        src="https://extras.thetimes.co.uk/web/public/2018/world-cup-alexa-breifing/assets/latest-briefing.mp3"
      />
      <div
        class="emotion-0"
      >
        <div>
          Well hello there children!!!
        </div>
      </div>
      <div
        class="emotion-0"
      >
        <div
          class="emotion-7"
          data-testid="audio-slider"
        >
          <div
            class="emotion-2"
            data-testid="audio-slider-track"
            values="0"
          >
            <div
              aria-label="slider"
              aria-valuemax="20"
              aria-valuemin="0"
              aria-valuenow="0"
              class="emotion-1"
              draggable="false"
              role="slider"
              style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(NaNpx, NaNpx);"
              tabindex="0"
              values="0"
            />
          </div>
          <div
            class="emotion-6"
          >
            <div
              class="emotion-5"
            >
              <div
                class="emotion-3"
                data-testid="min-label"
              >
                00:00
              </div>
              <div
                class="emotion-3"
                data-testid="max-label"
              >
                00:20
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-0"
      >
        <div
          class="emotion-41"
        >
          <div
            class="emotion-22"
          >
            <div
              class="emotion-21"
              data-testid="volume-control"
            >
              <div
                class="emotion-13"
                data-testid="min-label"
              >
                <button
                  class="emotion-12"
                  data-testid="mute-button"
                  type="button"
                >
                  <div
                    class="emotion-11"
                  >
                    <div
                      class="emotion-10"
                    >
                      <svg
                        class="emotion-9"
                        viewBox="0 0 24 24"
                      >
                        <title>
                          Volume down
                        </title>
                        <path
                          d="M18.5 12c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM5 9v6h4l5 5V4L9 9H5z"
                        />
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
              <div
                class="emotion-15"
                data-testid="volume-control-track"
                values="1"
              >
                <div
                  aria-label="Volume Control"
                  aria-valuemax="1"
                  aria-valuemin="0"
                  aria-valuenow="1"
                  class="emotion-1"
                  draggable="false"
                  role="slider"
                  style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(NaNpx, NaNpx);"
                  tabindex="0"
                  values="1"
                />
              </div>
              <div
                class="emotion-20"
                data-testid="max-label"
              >
                <button
                  class="emotion-12"
                  data-testid="volumeup-button"
                  type="button"
                >
                  <div
                    class="emotion-11"
                  >
                    <div
                      class="emotion-10"
                    >
                      <svg
                        class="emotion-9"
                        viewBox="0 0 24 24"
                      >
                        <title>
                          Volume up
                        </title>
                        <path
                          d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"
                        />
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            class="emotion-38"
          >
            <div
              class="emotion-27"
            >
              <button
                class="emotion-26"
                data-testid="audio-player-replay"
                type="button"
              >
                <div
                  class="emotion-11"
                >
                  <div
                    class="emotion-10"
                  >
                    <svg
                      class="emotion-23"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        Replay10 icon
                      </title>
                      <path
                        d="M12 5V1L7 6l5 5V7c3.3 0 6 2.7 6 6s-2.7 6-6 6-6-2.7-6-6H4c0 4.4 3.6 8 8 8s8-3.6 8-8-3.6-8-8-8zm-1.1 11H10v-3.3L9 13v-.7l1.8-.6h.1V16zm4.3-1.8c0 .3 0 .6-.1.8l-.3.6s-.3.3-.5.3-.4.1-.6.1-.4 0-.6-.1-.3-.2-.5-.3-.2-.3-.3-.6-.1-.5-.1-.8v-.7c0-.3 0-.6.1-.8l.3-.6s.3-.3.5-.3.4-.1.6-.1.4 0 .6.1c.2.1.3.2.5.3s.2.3.3.6.1.5.1.8v.7zm-.9-.8v-.5s-.1-.2-.1-.3-.1-.1-.2-.2-.2-.1-.3-.1-.2 0-.3.1l-.2.2s-.1.2-.1.3v2s.1.2.1.3.1.1.2.2.2.1.3.1.2 0 .3-.1l.2-.2s.1-.2.1-.3v-1.5z"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
            <div
              class="emotion-27"
            >
              <button
                aria-pressed="false"
                class="emotion-31"
                data-testid="audio-player-play-button"
                type="button"
              >
                <div
                  class="emotion-11"
                >
                  <div
                    class="emotion-10"
                  >
                    <svg
                      class="emotion-23"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        Play
                      </title>
                      <polygon
                        points="8 5 8 19 19 12"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
            <div
              class="emotion-27"
            >
              <button
                class="emotion-26"
                data-testid="audio-player-forward"
                type="button"
              >
                <div
                  class="emotion-11"
                >
                  <div
                    class="emotion-10"
                  >
                    <svg
                      class="emotion-23"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        Forward10 icon
                      </title>
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M18 13c0 3.31-2.69 6-6 6s-6-2.69-6-6 2.69-6 6-6v4l5-5-5-5v4c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8h-2z"
                      />
                      <path
                        d="M10.86 15.94v-4.27h-.09L9 12.3v.69l1.01-.31v3.26zM12.25 13.44v.74c0 1.9 1.31 1.82 1.44 1.82.14 0 1.44.09 1.44-1.82v-.74c0-1.9-1.31-1.82-1.44-1.82-.14 0-1.44-.09-1.44 1.82zm2.04-.12v.97c0 .77-.21 1.03-.59 1.03s-.6-.26-.6-1.03v-.97c0-.75.22-1.01.59-1.01.38-.01.6.26.6 1.01z"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="emotion-22"
          >
            <div
              class="emotion-39"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
